samples/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Cycle__c</fullName>
        <label>Maintenance Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warehouse_Sku__c</fullName>
        <externalId>true</externalId>
        <label>Warehouse Sku</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>